# LevelUp

./: .env  .gitignore  .pre-commit-config.yaml  LevelUp - ML System Design - Canvas.pptx  Makefile  README.md  docker-compose.yml  pyproject.toml  state_history.json
.github/workflows/: ci.yml
LevelUpUi/: Dockerfile  README.md  angular.json  package-lock.json  package.json
LevelUpUi/src/: index.html
LevelUpUi/src/app/: app.html  app.spec.ts  app.ts
app/: Dockerfile  main.py
app/.cph/: .main.py_8d6b844b6c5652c2c780e0c6ab6d791d.prob
app/api/: routes.py  schemas.py
data/: .gitignore  codeforces_cleaned.csv.dvc  codeforces_train.csv.dvc  data_ingestion.py  preprocessing.py
data/hf_cache/evanellis___codeforces_with_only_correct_completions/default/0.0.0/97f63232242627a2d1e6d95d5058267826b29d14/: dataset_info.json
data/sql_db/: .gitignore  README_session_states.md  codeforces_train.sql.dvc  example_session_states.py  grafana_metrics.sql  init_session_states.py  insert_grafana_data.py  session_state_db.py  session_states.sql
evaluation/: eval_mlflow.py
ml/: NEBIUS_INTEGRATION.md  README.md  agent.py  embedding_generator.py  eval_mlflow.py  metrics.py  nebius_wrapper.py  rag_retriever.py  sandbox.py  workflow_graph.txt
models/: state.py
pipelines/: rag_pipeline.py
tests/: test_full_integration.py  test_main.py  test_nebius_integration.py
